--- a/LoginPINO/app/build.gradle
+++ b/LoginPINO/app/build.gradle
@@ -40,7 +40,16 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxkotlin:2.2.0"
     implementation 'com.android.support:design:28.0.0'
 
+    // GSON
+    implementation 'com.google.code.gson:gson:2.8.5'
+    // RETROFIT
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
     implementation 'com.ivankocijan:MagicViews:3.1.1@aar'
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     implementation 'com.blankj:utilcode:1.23.5'
