--- a/LoginPINO/app/build.gradle
+++ b/LoginPINO/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
 
     //pdf
     implementation 'com.github.barteksc:android-pdf-viewer:3.1.0-beta.1'
+
+    //youtube
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
