--- a/LoginPINO/app/build.gradle
+++ b/LoginPINO/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.loginpino"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -56,7 +56,9 @@ dependencies {
     implementation 'com.github.florent37:shapeofview:1.3.2'
 
     //pdf
-    implementation 'com.github.barteksc:android-pdf-viewer:3.1.0-beta.1'
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    implementation 'com.github.kk121:File-Loader:1.2'
+    implementation 'com.karumi:dexter:5.0.0'
 
     //youtube
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
